# product-thumbnail-resizer

./: .gitignore  README.md  pyproject.toml  run.bat  run.py
product_thumbnail_resizer/: log.py  main.py  settings.py
