[project]
name = "product_thumbnail_resizer"
version = "0.1.0"
description = ""
authors = [{ name = "Danyal Zia Khan", email = "danyalziakhan@gmail.com" }]
requires-python = ">=3.10.0,<3.11"
readme = "README.md"
dependencies = [
    "Pillow>=9.2.0,<10",
    "loguru>=0.6.0,<0.7",
    "opencv-python>=4.6.0.66,<5",
    "opencv-utf-8>=0.0.5,<0.0.6",
    "openpyxl>=3.0.10,<4",
    "pandas>=1.4.3,<2",
    "requests>=2.28.1,<3",
    "requests-cache>=0.9.5,<0.10",
    "tqdm>=4.64.0,<5",
]

[dependency-groups]
dev = [
    "black>=22.10.0,<23",
    "isort>=5.10.1,<6",
    "ipython>=8.5.0,<9",
    "ipykernel>=6.16.1,<7",
]

[tool.black]
line-length = 88
exclude = '\.venv'
include = '\.py$'

[tool.isort]
profile = "black"
multi_line_output = 3                        # corresponds to -m  flag
include_trailing_comma = true                # corresponds to -tc flag
skip_glob = ".venv, */build, */.git, */temp"
float_to_top = true
known_first_party = "build"
skip = []                                    # "build" is included in the default skip list
lines_between_types = 1
lines_after_imports = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "**/temp"]
venv = ".venv"
stubPath = "stubs"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = true
reportUnknownMemberType = false
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateUsage = true
reportUntypedFunctionDecorator = false
reportImportCycles = true
reportUnusedImport = "warning"
reportUnknownLambdaType = false
